add flexbox and make site mobile first

--- a/index.html
+++ b/index.html
@@ -12,30 +12,34 @@
     <body>
         <div class="container">
             <header>
-                <h1><span>rogue</span> pickings</h1>
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="">About</a>
-                        </li>
-                        <li>
-                            <a href="">Menu</a>
-                        </li>
-                        <li>
-                            <a href="">Locations</a>
-                        </li>
-                        <li>
-                            <a href="">Gallery</a>
-                        </li>
-                        <li>
-                            <a href="">Reviews</a>
-                        </li>
-                        <li>
-                            <a href="">Contact</a>
-                        </li>
+                <div class="site-name">
+                    <h1><span>rogue</span> pickings</h1>
+                </div>
+            </header>
+            <div class="nav-items">
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="">About</a>
+                            </li>
+                            <li>    
+                                <a href="">Menu</a>
+                            </li>
+                            <li>
+                                <a href="">Locations</a>
+                            </li>
+                            <li>
+                                <a href="">Gallery</a>
+                            </li>
+                            <li>
+                                <a href="">Reviews</a>
+                            </li>
+                            <li>
+                                <a href="">Contact</a>
+                            </li>
                     </ul>
                 </nav>
-            </header>
+            </div>
             <section class="top-section">
                 <div class="main-image"><img src="img/download.jpg" alt="green beans" /></div>
                 <div class="main-title">
